crates/toml/tests/snapshots/invalid/string/no-open-06.stderr
TOML parse error at line 1, column 7
  |
1 | a = [a"""]
  |       ^
missing comma between array elements, expected `,`
